# norstop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
src/norstop/: __init__.py  const.py  core.py
tests/: test_removal.py
