[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "norstop"
version = "0.1.0"
description = "Fast Norwegian stopword remover"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Vahid Niamadpour", email = "contact@pythonology.eu"}]
license = {text = "MIT"}

# This automatically finds the code in 'src'
[tool.setuptools.packages.find]
where = ["src"]